<resources>
    <string name="app_name">RentCars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_label">Профиль</string>
    <string name="cars_label">Список авто</string>
    <string name="edit">Редактировать</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="email">Почта</string>
    <string name="region">Регион</string>
    <string name="save">Сохранить</string>
    <string name="add_auto">Добавить авто</string>
</resources>